--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "dependencies": {
     "@create-figma-plugin/ui": "^2.1.3",
     "@create-figma-plugin/utilities": "^2.1.3",
-    "preact": "^10",
-    "prismjs": "^1.28.0",
-    "react-simple-code-editor": "^0.13.1"
+    "preact": "^10"
   },
   "devDependencies": {
     "@create-figma-plugin/build": "^2.1.3",
     "@create-figma-plugin/tsconfig": "^2.1.3",
     "@figma/plugin-typings": "1.53.0",
-    "@types/prismjs": "^1.26.0",
     "@types/react": "^18",
     "react": "^18",
     "typescript": "^4"
