--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@create-figma-plugin/ui": "^2.1.3",
     "@create-figma-plugin/utilities": "^2.1.3",
+    "@types/lodash": "^4.14.186",
+    "lodash": "^4.17.21",
     "preact": "^10"
   },
   "devDependencies": {
